testsuite/tests/rename/should_fail/T22688.hs
module T22688a where

data Foo m a

instance Foo m where
  fmap _ x = case x of
